[gd_scene load_steps=36 format=2]

[ext_resource path="res://scanes/cenario.tscn" type="PackedScene" id=1]
[ext_resource path="res://scanes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/cenarios/muro parte da frente.png" type="Texture" id=3]
[ext_resource path="res://sprites/cenarios/bandeirinha 67x26.png" type="Texture" id=4]
[ext_resource path="res://scanes/scanes barracas/barraca - economia.tscn" type="PackedScene" id=5]
[ext_resource path="res://scanes/scanes barracas/barraca - trabalho.tscn" type="PackedScene" id=6]
[ext_resource path="res://scanes/scanes barracas/barraca - populacao.tscn" type="PackedScene" id=7]
[ext_resource path="res://scanes/scanes barracas/barraca - terri e ambiente.tscn" type="PackedScene" id=8]
[ext_resource path="res://scanes/scanes barracas/barraca - saude.tscn" type="PackedScene" id=9]
[ext_resource path="res://scanes/scanes barracas/barraca - educacao.tscn" type="PackedScene" id=10]
[ext_resource path="res://scanes/resfirma.tscn" type="PackedScene" id=11]
[ext_resource path="res://scanes/marcos.tscn" type="PackedScene" id=12]
[ext_resource path="res://music/Playlistfundo.mp3" type="AudioStream" id=13]
[ext_resource path="res://sprites/cenarios/pt 2 subida.png" type="Texture" id=14]
[ext_resource path="res://sprites/cenarios/virada.png" type="Texture" id=15]
[ext_resource path="res://sprites/cenarios/lixeira frente.png" type="Texture" id=16]
[ext_resource path="res://sprites/cenarios/m des.png" type="Texture" id=17]
[ext_resource path="res://sprites/cenarios/lixeira lado.png" type="Texture" id=18]
[ext_resource path="res://scanes/rodolfo.tscn" type="PackedScene" id=19]
[ext_resource path="res://scanes/arbusto.tscn" type="PackedScene" id=20]
[ext_resource path="res://sprites/cenarios/grama.png" type="Texture" id=21]
[ext_resource path="res://sprites/cenarios/grama1.png" type="Texture" id=22]
[ext_resource path="res://sprites/Bonecos/arquivo escondido na firma.png" type="Texture" id=23]
[ext_resource path="res://sprites/Carta.png" type="Texture" id=24]
[ext_resource path="res://scripits/carta.gd" type="Script" id=25]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 118.983, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 26.6689 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.9795, 9.3828 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.76349, 32.4779 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20.5293, 9.37206 )

[sub_resource type="TileSet" id=6]
0/name = "bandeirinha 67x26.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 67, 26 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 938.097, 5.54132 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 12.2541 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/ChiKareGo2.ttf"

[sub_resource type="DynamicFont" id=10]
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 9 )

[node name="game" type="Node2D"]

[node name="node" type="Node" parent="."]

[node name="cenario" parent="node" instance=ExtResource( 1 )]
position = Vector2( -16.1907, 15.4632 )

[node name="grama" type="Sprite" parent="node/cenario"]
position = Vector2( -401.517, 935.889 )
rotation = 3.14159
texture = ExtResource( 21 )

[node name="ysort" type="YSort" parent="node"]

[node name="lixeira lado" type="Sprite" parent="node/ysort"]
position = Vector2( 8.82426, 571.273 )
scale = Vector2( 1.80677, 1.80677 )
texture = ExtResource( 18 )

[node name="população" parent="node/ysort" instance=ExtResource( 7 )]
position = Vector2( 74.4082, 369.493 )

[node name="educacao" parent="node/ysort" instance=ExtResource( 10 )]
position = Vector2( 77.1708, 262.101 )

[node name="economia" parent="node/ysort" instance=ExtResource( 5 )]
position = Vector2( 74.209, 159.415 )

[node name="trabalho" parent="node/ysort" instance=ExtResource( 6 )]
position = Vector2( 1088.34, 163 )

[node name="terri e amb" parent="node/ysort" instance=ExtResource( 8 )]
position = Vector2( 1090.23, 348.036 )

[node name="saude" parent="node/ysort" instance=ExtResource( 9 )]
position = Vector2( 1090.34, 255 )

[node name="marcos" parent="node/ysort" instance=ExtResource( 12 )]
position = Vector2( 439.714, 42.4249 )

[node name="m des" type="Sprite" parent="node/ysort"]
position = Vector2( 868.471, 39.0846 )
texture = ExtResource( 17 )

[node name="body" type="StaticBody2D" parent="node/ysort/m des"]
position = Vector2( 1.89203, 4.83516 )

[node name="shape" type="CollisionShape2D" parent="node/ysort/m des/body"]
position = Vector2( 0.783936, 9.13171 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="node/ysort/m des/body"]
position = Vector2( 111, -9 )
shape = SubResource( 2 )

[node name="lixeira frente" type="Sprite" parent="node/ysort/m des"]
position = Vector2( -1.47693, 13.0607 )
scale = Vector2( 1.699, 1.699 )
texture = ExtResource( 16 )

[node name="muro parte da frente" type="Sprite" parent="node/ysort"]
position = Vector2( 10.26, 494.592 )
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="node/ysort/muro parte da frente"]
position = Vector2( -2.00428, 34.3144 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="node/ysort/muro parte da frente/StaticBody2D"]
polygon = PoolVector2Array( -11.6581, -11.955, -11.5852, -11.9442, 26.7667, -12.2415, 26.761, 18.95, 11.8782, 19.1075, 12.4247, 80.2749, -12.6973, 80.5722, -11.3444, 19.1673, -23.7542, 18.5482, -24.4087, -12.4232 )

[node name="pt 2 subida" type="Sprite" parent="node/ysort"]
position = Vector2( 424.221, 25.8356 )
texture = ExtResource( 14 )

[node name="baixo" type="StaticBody2D" parent="node/ysort/pt 2 subida"]
position = Vector2( -1.78479, 15.3464 )

[node name="shape" type="CollisionShape2D" parent="node/ysort/pt 2 subida/baixo"]
position = Vector2( -6.59665, 8.3401 )
shape = SubResource( 3 )

[node name="lado" type="StaticBody2D" parent="node/ysort/pt 2 subida"]
position = Vector2( 21.5381, -4.49492 )

[node name="shape" type="CollisionShape2D" parent="node/ysort/pt 2 subida/lado"]
position = Vector2( 1.31104, -0.374577 )
shape = SubResource( 4 )

[node name="virada" type="Sprite" parent="node/ysort"]
position = Vector2( 970.471, -104.738 )
texture = ExtResource( 15 )

[node name="shape" type="StaticBody2D" parent="node/ysort/virada"]
position = Vector2( -0.0157471, -9.38342 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="node/ysort/virada/shape"]
position = Vector2( 0.552856, 12.4719 )
shape = SubResource( 5 )

[node name="rodolfo" parent="node/ysort" instance=ExtResource( 19 )]
position = Vector2( -595.663, 499.466 )

[node name="player" parent="node/ysort" instance=ExtResource( 2 )]
position = Vector2( -314.149, 485.514 )

[node name="arquivo escondido na firma" type="Sprite" parent="node/ysort"]
position = Vector2( 1234.55, 452.213 )
scale = Vector2( 1.81028, 1.81028 )
texture = ExtResource( 23 )

[node name="bandeiras2" type="TileMap" parent="node"]
tile_set = SubResource( 6 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 720884, 0, 0, 720885, 0, 0, 720886, 0, 0, 720887, 0, 0, 720888, 0, 0, 720889, 0, 0, 720890, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0 )

[node name="body" type="StaticBody2D" parent="node/bandeiras2"]

[node name="shape" type="CollisionShape2D" parent="node/bandeiras2/body"]
position = Vector2( 615.074, 669.372 )
shape = SubResource( 7 )

[node name="resfirma" parent="." instance=ExtResource( 11 )]
position = Vector2( 1469.22, 43.9445 )

[node name="grama" type="Sprite" parent="resfirma"]
position = Vector2( 335.68, 142.025 )
scale = Vector2( 0.839573, 0.839573 )
texture = ExtResource( 21 )

[node name="grama2" type="Sprite" parent="resfirma/grama"]
position = Vector2( 128.954, 191.128 )
scale = Vector2( 1.19108, 1.19108 )
texture = ExtResource( 21 )

[node name="grama3" type="Sprite" parent="resfirma/grama"]
position = Vector2( -1817.5, 966.902 )
rotation = -3.14159
scale = Vector2( 1.28043, 1.25782 )
texture = ExtResource( 21 )

[node name="grama4" type="Sprite" parent="resfirma/grama"]
position = Vector2( -1013.73, 941.945 )
rotation = -3.14159
scale = Vector2( 1.19108, 1.19108 )
texture = ExtResource( 21 )

[node name="grama1" type="Sprite" parent="resfirma/grama"]
position = Vector2( -342.748, -330.034 )
scale = Vector2( 1.27889, 1.41935 )
texture = ExtResource( 22 )

[node name="grama1" type="Sprite" parent="resfirma/grama/grama1"]
position = Vector2( -1656.76, 10.3784 )
texture = ExtResource( 22 )

[node name="grama5" type="Sprite" parent="resfirma/grama"]
position = Vector2( -218.994, 944.147 )
rotation = -3.14159
scale = Vector2( 1.19108, 1.19108 )
texture = ExtResource( 21 )

[node name="grama6" type="Sprite" parent="resfirma/grama"]
position = Vector2( -3081.66, -0.828918 )
rotation = 1.5708
scale = Vector2( 1.19108, 1.19108 )
texture = ExtResource( 22 )

[node name="grama" type="Sprite" parent="resfirma/grama"]
position = Vector2( -90.8109, -682.878 )
scale = Vector2( 1.40626, 1.40626 )
texture = ExtResource( 21 )

[node name="arbusto" parent="." instance=ExtResource( 20 )]
position = Vector2( 1464.85, -8.49487 )
scale = Vector2( 1.5, 1.5 )

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -9.087
autoplay = true

[node name="carta" type="Area2D" parent="."]
position = Vector2( -240.735, 500.543 )
script = ExtResource( 25 )

[node name="sprite" type="Sprite" parent="carta"]
texture = ExtResource( 24 )

[node name="shape" type="CollisionShape2D" parent="carta"]
position = Vector2( -1.18921, 1.04056 )
shape = SubResource( 8 )

[node name="inte1" type="Label" parent="carta"]
visible = false
margin_left = 11.75
margin_top = -7.0
margin_right = 94.75
margin_bottom = 8.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Interagir (e)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inte2" type="Label" parent="carta"]
visible = false
margin_left = 12.5
margin_top = -6.75
margin_right = 95.5
margin_bottom = 8.25
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Interagir (e)"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="carta" to="carta" method="_on_carta_body_entered"]
[connection signal="body_exited" from="carta" to="carta" method="_on_carta_body_exited"]
